--- a/sourse/pug/blocks/header-block/_header-block.pug
+++ b/sourse/pug/blocks/header-block/_header-block.pug
@@ -16,5 +16,6 @@ mixin header-block()
 							+e.img-wrap
 								img.lazy(src="#" data-src="img/head-2.png", alt="")
 							+e.text Учтем  ваш бюджет  на&nbsp;строительство
-				+e.btn(href="#") Узнать стоимость будущего дома
+				+e.btn.btn-js.scroll-link(href="#s-quiz") Узнать стоимость будущего дома
+					
 	// end header-block
