--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -1,23 +1,116 @@
 .modal-win {
 	display: block;
 	position: relative;
+	@include media-breakpoint-up(lg) {
+
+		max-width: 1061px;
+	}
+	max-width: 740px;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: #ffffff;
+	z-index: 2;
+	border-radius: 5px;
+	overflow: hidden;
+	&::after{
+		content: '';
+		position: absolute;
+
+		// z-index: -1;
+		pointer-events: none;
+		border-radius: 5px;
+		border: 1px solid #eaeaea;
+		@include a-cent;
+		width: calc(100% - 12px);
+		height: calc(100% - 12px);
+	}
 	// .modal-content {
 	// 	// max-width: 485px;
 	// 	// padding-right: 40px 15px;
 	// }
-	.mfp-close {
-		color: $primary;
-		font-size: 40px;
-		font-weight: 100;
-	}   
-}
+		.img-bg{
+			background-position: top center;
+		}
+	.form-wrap{
+		&__modal-head{
+			position: relative;
+			z-index: 2;
+			@include media-breakpoint-up(lg) {
 
+				margin-right: -140px;
+			}
+			margin-bottom: 20px;
+		}
+		&__polite{
+			max-width: 310px;
+			color: #bdbdbd;
+			a{
+				color: #bdbdbd !important;
+
+			}
+		}
+		&__title{
+			color: #1b1b1b;
+			@extend .mono;
+			@include media-breakpoint-up(sm) {
+
+				font-size: 36px;
+			}
+			font-size: 28px;
+			line-height: 1.2;
+		}
+		&__text{
+			color: $secondary; 
+			@include media-breakpoint-up(sm) {
+
+				font-size: $h6-font-size; 
+			}
+			letter-spacing: 0.4px;
+			margin-bottom: 25px;
+		}
+		&__input{
+			background-color: #ffffff;
+			border: 1px solid #dbdbdb;
+			font-size: 18px;
+			padding: 27px 60px;
+		}
+
+		&__btn{
+			margin-top: 0;
+		}
+	}
+	input[type="tel"]{
+		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='19' height='19' viewBox='0 0 19 19'%3E%3Cdefs%3E%3Cpath id='jlu9a' d='M1073.84 1135.164l-.968 1.607a2.266 2.266 0 0 1-1.342 1.035 5.6 5.6 0 0 1-1.488.194c-2.183 0-5.36-1.148-9.627-5.415-5.364-5.365-5.8-9.006-5.22-11.116a2.269 2.269 0 0 1 1.034-1.343l1.608-.966a1.116 1.116 0 0 1 1.505.339l2.565 3.846a1.123 1.123 0 0 1-.245 1.503l-1.439 1.12a.48.48 0 0 0-.127.616l.117.213c.385.705.866 1.584 2.636 3.356 1.771 1.772 2.65 2.251 3.356 2.636l.213.118c.209.116.47.06.614-.13l1.12-1.44a1.122 1.122 0 0 1 1.503-.244l3.846 2.565c.497.33.646.994.338 1.506zm-.693-.978l-3.845-2.565a.488.488 0 0 0-.652.106l-1.12 1.44a1.108 1.108 0 0 1-1.422.293l-.208-.115c-.742-.404-1.665-.907-3.502-2.744-1.836-1.836-2.34-2.76-2.744-3.502l-.114-.208a1.108 1.108 0 0 1 .293-1.422l1.44-1.12c.2-.157.245-.44.106-.652l-1.17-1.754-1.393-2.092a.484.484 0 0 0-.653-.147l-1.608.965c-.365.214-.634.56-.75.967-.534 1.948-.091 5.351 5.058 10.501 5.15 5.15 8.553 5.593 10.5 5.058.407-.115.753-.383.966-.748l.965-1.608a.484.484 0 0 0-.147-.653zm-7.698-12.335c0-.174.142-.316.317-.316a6.023 6.023 0 0 1 6.015 6.016.317.317 0 1 1-.633 0 5.389 5.389 0 0 0-5.382-5.383.317.317 0 0 1-.317-.317zm0 1.9c0-.174.142-.316.317-.316a4.12 4.12 0 0 1 4.116 4.116.317.317 0 1 1-.633 0 3.487 3.487 0 0 0-3.483-3.483.317.317 0 0 1-.317-.317zm0 1.9c0-.175.142-.317.317-.317a2.219 2.219 0 0 1 2.216 2.217.317.317 0 1 1-.633 0 1.585 1.585 0 0 0-1.583-1.583.317.317 0 0 1-.317-.317z'/%3E%3C/defs%3E%3Cg%3E%3Cg transform='translate(-1055 -1119)'%3E%3Cuse fill='%23555' xlink:href='%23jlu9a'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+		background-position: 24px center;
+		background-repeat: no-repeat;
+
+	}
+	.col{
+		@include media-breakpoint-up(sm) {
+			padding: 50px 60px;
+		}
+		padding: 50px 15px 30px;
+		
+	}
+}
 a {
 	outline: 0 !important;
 }
 
 .modal-form {
 	position: relative;
+}
+
+.toggle-block{
+	.form-wrap__input-wrap{
+		margin-bottom: 30px;
+		input{
+			padding: 14px 80px;
+		}
+	}
+}
+.toggle-block:not(.active){
+	display: none;
 }
 
 #foot-dialog {
