--- a/sourse/pug/blocks/s-accord/_s-accord.pug
+++ b/sourse/pug/blocks/s-accord/_s-accord.pug
@@ -54,7 +54,7 @@ mixin s-accord()
 									br
 									| технического отдела
 					.col
-						+e.btn(href='#') Задать вопрос
-				
+						+e.btn.btn-js.popup-with-move-anim(href="#modal-call2") Задать вопрос
+							
 
 	// end s-accord
