--- a/sourse/pug/blocks/s-director/_s-director.pug
+++ b/sourse/pug/blocks/s-director/_s-director.pug
@@ -18,9 +18,9 @@ mixin s-director()
 						|
 						strong вся ответственность лежит на&nbsp;ней!
 					.text-center
-						+e.btn(href='#') Задать вопрос
+						+e.btn.btn-js.popup-with-move-anim(href="#modal-call3") Задать вопрос
 							div Андрею Владимировичу
-
+							
 						+e.foot Андрей Владимирович ответит  
 							br
 							| в течении рабочего дня с 9:00 до 16:00
