--- a/sourse/pug/blocks/s-team/_s-team.pug
+++ b/sourse/pug/blocks/s-team/_s-team.pug
@@ -50,8 +50,9 @@ mixin s-team()
 												| 12 лет
 									+e.caption &laquo;В&nbsp;нашей работе главное внимание к&nbsp;деталям, ведь из&nbsp;деталей складывается общее понимание задачи. объемов, материальных и&nbsp;физических обоснований&raquo;
 									//- block
-									+e.btn(href='#') Задать вопрос
+									+e.btn.btn-js(href='#') Задать вопрос
 										div Андрею Владимировичу
+										
 
 									+e.foot Андрей Владимирович ответит  
 										br
