--- a/sourse/pug/blocks/top-line/_top-line.pug
+++ b/sourse/pug/blocks/top-line/_top-line.pug
@@ -19,9 +19,9 @@ mixin top-line()
 									+icon('tel')
 
 						.col-auto
-							+e.btn(href="#") 
+							+e.btn.btn-js.popup-with-move-anim(href="#modal-call") 
 								+e.SPAN.text Заказать звонок
 								+e.icon-wrap
 									+icon('email')
-
+								
 	// end .top-line
