--- a/sourse/pug/blocks/form-wrap/form-wrap.scss
+++ b/sourse/pug/blocks/form-wrap/form-wrap.scss
@@ -88,6 +88,64 @@
 
 
 .custom-input{
+	cursor: pointer;
+	width: 372px;
+	height: 67px;
+	border-radius: 5px;
+	border: 1px solid #dbdbdb;
+	display: flex !important;
+	// justify-content: center;
+	align-items: center;
+	text-align: center;
+	z-index: 2;
+	position: relative;
+	&__text{
+		width: 50%;
+		display: block;
+		padding: 5px;
+		@include mt;
+		&--now{
+			color: #ffffff;
+		}
+	}
+	&__input{
+		position: absolute;
+		// opacity: 0;
+		width: 1px;
+		height: 1px;
+		margin: -1px;
+		border: 0;
+		padding: 0;
+		clip: rect(0 0 0 0 );
+		overflow: hidden;
+	}
+	&__lab{
+		 width: calc(50% - 10px);
+		position: absolute;
+		z-index: -1;
+		border-radius: 5px;
+		background-color: #b5b5b5;
+		height: calc(100% - 10px);
+		left: 5px;
+		@include mt;
+	}
+  
+	&__input:checked + &__lab{
+	 left: calc(50% + 5px);
+	}
+ 
+	&__input:checked ~ &__text--now{
+	//  left: calc(50% + 5px);
+	color: $body-color;
+	}
+ 
+	&__input:checked ~ &__text--time{
+	//  left: calc(50% + 5px);
+	color: #fff;
+	}
+ 
+}
+.custom-input2{
 	display: block;
 	margin: auto;
 	 
@@ -112,9 +170,10 @@
 		display: block;
 		top: -1px;
 		// display: inline-block;
-		width: 20px;
-		height: 20px;
-		background-color: $primary;
+		width: $h5-font-size;
+		height: $h5-font-size;
+		background-color: #f7f7f7;
+		border-radius: 50%;
 		@include mt;
 		position: absolute; 
 		margin-right: 10px;
@@ -122,10 +181,11 @@
 	}
 	&__input[type="checkbox"] + &__lab{
 		&::after{ 
-			content:   url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='13' height='8' viewBox='0 0 448 512'%3E%3Cpath fill='%23fff' d='M413.505 91.951L133.49 371.966l-98.995-98.995c-4.686-4.686-12.284-4.686-16.971 0L6.211 284.284c-4.686 4.686-4.686 12.284 0 16.971l118.794 118.794c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-11.314-11.314c-4.686-4.686-12.284-4.686-16.97 0z' class='st0'/%3E%3C/svg%3E");
+			content:   url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='26' height='16' viewBox='0 0 448 512'%3E%3Cpath fill='%23909090' d='M413.505 91.951L133.49 371.966l-98.995-98.995c-4.686-4.686-12.284-4.686-16.971 0L6.211 284.284c-4.686 4.686-4.686 12.284 0 16.971l118.794 118.794c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-11.314-11.314c-4.686-4.686-12.284-4.686-16.97 0z' class='st0'/%3E%3C/svg%3E");
 			position: absolute;
 			@include a-cent; 
 			opacity: 0;
+			margin-top: 3px;
 		}
 	}
 	&__input[type="radio"] + &__lab{
@@ -135,7 +195,7 @@
 			content: '';
 			position: absolute;
 			@include a-cent;
-			background-color: $success;
+			// background-color: $success;
 			opacity: 0;
 			width: 10px;
 			height: 10px;
@@ -143,19 +203,17 @@
 		}
 	}
 
-	&__input[type="checkbox"]:checked + &__lab{
-		background-color: $success;
+	// &__input[type="checkbox"]:checked + &__lab{
+	// 	// background-color: $success;
 		 
-	}
+	// }
 	&__input:checked + &__lab{ 
 		&::after{
 
 			opacity: 1;
 		}
 	}
-
 }
-
 
 
 
