--- a/sourse/pug/blocks/s-quiz/_s-quiz.scss
+++ b/sourse/pug/blocks/s-quiz/_s-quiz.scss
@@ -5,9 +5,9 @@
 	// background-color: hsl(0, 100%, 500%);
 	// background-color: rgba(155, 155, 155, 0.5);
 	padding-bottom: 10px !important;
-		&.visible{
+		// &.visible{
 		
-		}
+		// }
 
 		&__foot{
 			max-width: 760px;
@@ -63,7 +63,10 @@
 	}
 	&.visible .s-quiz{
 		&__inner{
-		 
+			.scr2__test_in{
+				padding-bottom: 30px;
+
+			}
 			@media only screen and (min-width:1020px){
 			 &::before{ 
 				 background:url(../img/quiz-after.png) center center no-repeat; 
@@ -118,9 +121,9 @@
 }
 
  
-.scr2__test{
+// .scr2__test{
 	
-}
+// }
 @media only screen and (min-width:1199px){
 	.scr2__test:before{
 			display: block;
@@ -327,15 +330,15 @@ display:none;
 		white-space: normal;
 	}
 }
-.scr2__next .button{
-	// max-width: 317px;
-	// width: 90%;
-	// height: 71px;
-	// margin: 0 auto;
-	// -webkit-background-size: 100% 100%;
-	// font-size: 1.45rem;
-	// background-size: 100% 100%;
-}
+// .scr2__next .button{
+// 	// max-width: 317px;
+// 	// width: 90%;
+// 	// height: 71px;
+// 	// margin: 0 auto;
+// 	// -webkit-background-size: 100% 100%;
+// 	// font-size: 1.45rem;
+// 	// background-size: 100% 100%;
+// }
   .button:disabled{
 	background: #dcdcdc !important;
 	border-color: #dcdcdc !important;
@@ -389,9 +392,9 @@ display:none;
 		padding-top: 23px;
 	height: 60px;
 }
-.irs{
-	// display: none;
-}
+// .irs{
+// 	// display: none;
+// }
 .irs{
 	height: 45px;
 	margin-top: -8px; 
