--- a/sourse/pug/blocks/s-steps/_s-steps.pug
+++ b/sourse/pug/blocks/s-steps/_s-steps.pug
@@ -49,7 +49,8 @@ mixin s-steps()
 								input(type='hidden', class="order", name='Вид формы', value=`Запишитесь на встречу  в нашем офисе` ) 
 								+inputt('Введите удобный день и время','text','Например, среда, 12:00')(name='time')
 								+inputt('Укажите ваш телефон для связи','tel','Введите ваш телефон')(required name='tel')
-								+e.btn(type='submit') Записаться на встречу
+								+e.btn.btn-js(type='submit') Записаться на встречу
+									
 								+e.polite Нажимая кнопку &laquo;Записаться на&nbsp;встречу&raquo;, вы&nbsp;принимаете условия 
 									|
 									a(href="#" target="_blank") передачи данных
