--- a/sourse/sass/bootstrap/_buttons.scss
+++ b/sourse/sass/bootstrap/_buttons.scss
@@ -3,7 +3,33 @@
 //
 // Base styles
 //
+ 
+@keyframes ripple {
+	100% {
+		opacity: 0;
+		transform: scale(2.5)
+	}
+}
 
+  .animate-js{
+    display: block;
+  position: absolute;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 100%;
+  transform: scale(0);
+  -webkit-transform: scale(0);
+  -mox-transform: scale(0);
+  z-index: 2 !important;
+  position: absolute !important;
+}
+.btn_animate {
+  animation: ripple .65s linear
+
+  }
+  .btn-js{
+    overflow: hidden;
+    position: relative;
+  }
 .btn {
   display: inline-block;
   font-weight: $btn-font-weight;
@@ -16,6 +42,7 @@
   @include transition($btn-transition);
   text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
   font-weight: bold;
+  position: relative;
   // Share hover and focus styles
   @include hover-focus {
     text-decoration: none;
