add submit form

--- a/sourse/pug/blocks/modal/_modal.pug
+++ b/sourse/pug/blocks/modal/_modal.pug
@@ -45,12 +45,12 @@ mixin modal()
 				input(type="hidden" class='utm_source' name='utm_source')
 				input(type="hidden" class='utm_term' name='utm_term')
 				input(type="hidden" class='order' name='order' value="Форма в квизе")
-				input(type="text" class='floor' name='floor' )
-				input(type="text" class='area' name='area' )
-				input(type="text" class='overlap' name='overlap' )
-				input(type="text" class='fasade' name='fasade' )
-				input(type="text" class='price' name='price' )
-				input(type="text" class='data' name='data' ) 
+				input(type="hidden" class='floor' name='floor' )
+				input(type="hidden" class='area' name='area' )
+				input(type="hidden" class='overlap' name='overlap' )
+				input(type="hidden" class='fasade' name='fasade' )
+				input(type="hidden" class='price' name='price' )
+				input(type="hidden" class='data' name='data' ) 
 				+input( 'tel','Введите ваш телефон')(required name='tel')
 				+b.LABEL.custom-input2
 					+e.INPUT.input(type='checkbox', name='sms', value='Да' )
